[package]
name = "shorekeeper-patch"
version = "0.1.0"
edition = "2021"

[lib]
name = "shorekeeper"
crate-type = ["cdylib"]

[features]
cn_beta_1_3_0 = []
cn_live_1_3_0 = []
os_live_1_3_0 = []
enable-sdk = []

[dependencies]
ilhook = "2.1.1"
windows = { version = "0.58.0", features = [
	"Win32_Foundation",
	"Win32_System_LibraryLoader",
	"Win32_System_SystemServices",
	"Win32_System_Console",
] }

[profile.release]
strip = true      # Automatically strip symbols from the binary.
lto = true        # Link-time optimization.
opt-level = 3     # Optimization level 3.
codegen-units = 1 # Maximum size reduction optimizations.
