[package]
name = "wicked-waifus-win-patch"
version = "0.1.0"
edition = "2021"

[lib]
name = "wicked_waifus_win"
crate-type = ["cdylib"]

[features]
cn_beta_1_4_0 = []
cn_beta_1_3_0 = []
cn_live_1_3_0 = []
os_live_1_3_0 = []
enable-sdk = []
only-sig-bypass = []
regular = ["dep:regex", "dep:widestring"]

[dependencies]
ilhook = "2.1.1"
interceptor-rs = { git = "https://git.xeondev.com/xavo95/interceptor-rs.git" }
regex = {version = "1.11.1", optional = true}
widestring = {version = "1.1.0", optional = true}
windows = { version = "0.58.0", features = [
	"Win32_Foundation",
	"Win32_System_LibraryLoader",
	"Win32_System_SystemServices",
	"Win32_System_Console",
] }

[profile.release]
strip = true      # Automatically strip symbols from the binary.
lto = true        # Link-time optimization.
opt-level = 3     # Optimization level 3.
codegen-units = 1 # Maximum size reduction optimizations.
